Fixed form on mobile and tablet

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -18,6 +18,10 @@
     line-height: $primary-button-lh-desktop;
   }
 
+  @include screen('desktop') {
+    width: 320px;
+  }
+
   &::before {
     @include psel();
     top: 0;
