--- a/src/css/main.css
+++ b/src/css/main.css
@@ -972,12 +972,9 @@ html body .article__paragraph {
   }
 }
 
-.form-wrapper .contact__form .name__input {
-  margin-right: var(--input-margin);
-}
-
 @media only screen and (min-width: 768px) {
   .form-wrapper .contact__form .name__input {
+    margin-right: var(--input-margin);
     -ms-flex-preferred-size: calc(50% - var(--input-margin));
         flex-basis: calc(50% - var(--input-margin));
   }
@@ -998,8 +995,16 @@ html body .article__paragraph {
   }
 }
 
-.form-wrapper .contact__form .primary-button {
-  width: 356px;
+@media only screen and (min-width: 768px) {
+  .form-wrapper .contact__form .primary-button {
+    width: 356px;
+  }
+}
+
+@media only screen and (min-width: 1366px) {
+  .form-wrapper .contact__form .primary-button {
+    width: 320px;
+  }
 }
 
 .wrapper .article {
@@ -1068,6 +1073,12 @@ html body .article__paragraph {
   .primary-button {
     font-size: 16px;
     line-height: 19px;
+  }
+}
+
+@media only screen and (min-width: 1366px) {
+  .primary-button {
+    width: 320px;
   }
 }
 
